--- a/pag04.html
+++ b/pag04.html
@@ -27,21 +27,42 @@
                         </div>
                     </div>
                     <div class="container-fluid mt-lg">
-                        <div class="col-sm-offset-3 col-sm-6">
-                            <img src="assets/img/logos/logo-conte-comigo.png" class="img-adaptative" width="180">
+                        <div class="col-sm-4 text-right">
+                            <h3 class="mb-0 mt-sm">É da nossa</h3>
+                            <h2 class="text-uppercase mt-0 mb-0"><strong>Alçada</strong></h2>
+                        </div>
+                        <div class="col-sm-6">
+                            <div class="pagnumber number04 text-white">
+                                <p>Seu cliente procura a agência porque tentou efetuar um saque na conta e o valor não foi dispensado. A partir dai, você tem que escolher os esclarecimentos corretos. E, claro, quanto menos tempo você usar para vencer essa missão, melhor.</p>
+                            </div>
                         </div>
                     </div>
                     <div class="container-fluid mt-lg">
-                        <div class="col-sm-offset-3 col-sm-6">
-                            <div class="box-content height-grid-5" style="background-image: url('assets/img/backgrounds/bck-pg-home.jpg');">
-                                <div class="mt-md text-center">
-                                    <h2>Jogo <strong>Conte Comigo</strong></h2>
-                                </div>
-                                <div class="text-left mt-md">
-                                    <p>Que tal se aventurar em missões que vão melhorar o seu dia a dia na CAIXA? Nesse jogo, cada fase concluída vale uma insígnia virtual. Quem conseguir juntar todas ganha pontuação no Tamo Junto e muito mais conhecimento para vencer os desafios. </p>
-                                </div>
-                                <div class="text-center mt-xl">
-                                    <a href="pag01.html" type="submit" class="btn btn-white outline mt-md">jogue agora</a>
+                        <div class="col-xs-4 pos-relative height-grid-5">
+                            <div class="menu-indicator">
+                                <ul class="list-indicator list-unstyled">
+                                    <li class="list-indicator-item inactive">
+                                        <a href="pag01.html"> fase <strong class="ml-sm">1</strong></a>
+                                    </li>
+                                    <li class="list-indicator-item inactive">
+                                        <a href="pag02.html">fase <strong class="ml-sm">2</strong></a>
+                                    </li>
+                                    <li class="list-indicator-item inactive">
+                                        <a href="pag03.html">fase <strong class="ml-sm">3</strong></a>
+                                    </li>
+                                    <li class="list-indicator-item active">
+                                        <a href="pag04.html">fase <strong class="ml-sm">4</strong></a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="col-xs-6">
+                            <div class="box-base">
+                                <div class="box-content height-grid-5" style="background-image: url('assets/img/backgrounds/bck-pg-04.jpg');">
+                                    
+                                    <div class="text-center mt-xl pt-xl">
+                                        <a href="#" type="submit" class="btn btn-white outline mt-md">jogue agora</a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
