--- a/pag01.html
+++ b/pag01.html
@@ -37,7 +37,7 @@
                         </div>
                     </div>
                     <div class="container-fluid mt-lg">
-                        <div class="col-xs-4 pos-relative height-grid-5">
+                        <div class="col-md-4">
                             <div class="menu-indicator">
                                 <ul class="list-indicator list-unstyled">
                                     <li class="list-indicator-item active">
@@ -55,16 +55,10 @@
                                 </ul>
                             </div>
                         </div>
-                        <div class="col-xs-6">
+                        <div class="col-md-6">
                             <div class="box-base">
                                 <div class="box-content height-grid-5" style="background-image: url('assets/img/backgrounds/bck-pg-01.jpg');">
-                                    <div class="mt-md text-center">
-                                        <h2>Jogo <strong>Conte Comigo</strong></h2>
-                                    </div>
-                                    <div class="text-left mt-md">
-                                        <p>Que tal se aventurar em missões que vão melhorar o seu dia a dia na CAIXA? Nesse jogo, cada fase concluída vale uma insígnia virtual. Quem conseguir juntar todas ganha pontuação no Tamo Junto e muito mais conhecimento para vencer os desafios. </p>
-                                    </div>
-                                    <div class="text-center mt-md">
+                                    <div class="text-center mt-xl pt-xl">
                                         <a href="#" type="submit" class="btn btn-white outline mt-md">jogue agora</a>
                                     </div>
                                 </div>
@@ -72,7 +66,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="footer">
+                <div class="footer mb-xl pb-xl mt-md">
                     <div class="container">
                         <div class="row">
                             <div class="col-sm-offset-3 col-sm-7 text-right mt-lg">
