--- a/pag04.html
+++ b/pag04.html
@@ -38,7 +38,7 @@
                         </div>
                     </div>
                     <div class="container-fluid mt-lg">
-                        <div class="col-xs-4 pos-relative height-grid-5">
+                        <div class="col-md-4">
                             <div class="menu-indicator">
                                 <ul class="list-indicator list-unstyled">
                                     <li class="list-indicator-item inactive">
@@ -56,7 +56,7 @@
                                 </ul>
                             </div>
                         </div>
-                        <div class="col-xs-6">
+                        <div class="col-md-6">
                             <div class="box-base">
                                 <div class="box-content height-grid-5" style="background-image: url('assets/img/backgrounds/bck-pg-04.jpg');">
                                     
@@ -68,7 +68,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="footer">
+                <div class="footer mb-xl pb-xl mt-md">
                     <div class="container">
                         <div class="row">
                             <div class="col-sm-offset-3 col-sm-7 text-right mt-lg">
