--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="footer">
+                <div class="footer mb-xl pb-xl mt-md">
                     <div class="container">
                         <div class="row">
                             <div class="col-sm-offset-3 col-sm-7 text-right mt-lg">
